--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "node-sass": "^4.9.0",
     "pug-plain-loader": "^1.0.0",
     "sass-loader": "^7.1.0",
+    "tslint-config-standard": "^8.0.1",
     "typescript": "^3.4.3",
     "vue-template-compiler": "^2.6.10"
   }
