--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
     "vue-i18n": "^8.14.1",
+    "vue-mq": "^1.0.1",
+    "vue-observe-visibility": "^0.4.4",
     "vue-property-decorator": "^8.1.0",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
