--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^2.6.5",
     "pug": "^2.0.4",
+    "sass": "^1.88.0",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
     "vue-i18n": "^8.14.1",
@@ -23,11 +24,13 @@
     "@vue/cli-plugin-babel": "^3.11.0",
     "@vue/cli-plugin-typescript": "^3.11.0",
     "@vue/cli-service": "^3.11.0",
-    "node-sass": "^4.9.0",
     "pug-plain-loader": "^1.0.0",
     "sass-loader": "^7.1.0",
     "tslint-config-standard": "^8.0.1",
-    "typescript": "^3.4.3",
+    "typescript": "^4.4.4",
     "vue-template-compiler": "^2.6.10"
+  },
+  "resolutions": {
+    "**/**/fsevents": "^1.2.9"
   }
 }
